Core finished, extension wip

--- a/.gitignore
+++ b/.gitignore
@@ -483,6 +483,7 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 
+.DS_Store
 /workshop.wwwapi/appsettings.json
 /workshop.wwwapi/appsettings.Development.json
 */**/bin/Debug   
